--- a/assets/css/user_details.css
+++ b/assets/css/user_details.css
@@ -220,9 +220,12 @@ body {
 }
 
 .full-name {
-    font-size: 20px;
-    font-weight: 600;
-    color: #1f2937;
+    color: var(--Colour-text-subtle, #333);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 0.32px;
     margin: 0;
 }
 
